# DepsFinder

./: CMakeLists.txt  DependenciesSearcher.cpp  TasksPool.h  config.ini
inih/cpp/: INIReader.cpp  INIReader.h
